Cup Of Joe Theme update

--- a/themes/cup-of-joe-theme/docroot/WEB-INF/liferay-plugin-package.properties
+++ b/themes/cup-of-joe-theme/docroot/WEB-INF/liferay-plugin-package.properties
@@ -10,7 +10,8 @@ author=Liferay, Inc.
 licenses=LGPL
 liferay-versions=6.2.0+
 
-#required-deployment-contexts=\
-#    resources-importer-web
+required-deployment-contexts=\
+	1-4-1-3-columns-layouttpl,\
+	resources-importer-web
 
 resources-importer-developer-mode-enabled=true
