LPS-41602 facebook icon is now visible and does not cause layout issues

--- a/hooks/social-bookmarks-hook/docroot/WEB-INF/src/portal.properties
+++ b/hooks/social-bookmarks-hook/docroot/WEB-INF/src/portal.properties
@@ -1,4 +1,4 @@
-social.bookmark.types=twitter,facebook,plusone,linkedin,addthis,blinklist,delicious,digg,evernote,newsvine,reddit,slashdot,stumbleupon,technorati,tuenti
+social.bookmark.types=twitter,plusone,facebook,linkedin,addthis,blinklist,delicious,digg,evernote,newsvine,reddit,slashdot,stumbleupon,technorati,tuenti
 
 social.bookmark.icons.path=../../../../taglib/ui/social_bookmark/icons/
 
